# Another_Me

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/web/: Dockerfile  index.html  package.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: verify_pipeline.py  verify_refactor.py
data/: module-agent-launch-agents.json  module-social-conversations.json
deploy/modelscope/: nginx.conf  run-backend.sh  run-postgres.sh  supervisord.conf
deploy/server/: README.md  host-nginx-vhost.conf  nginx.conf
docs/: BUGS.md  agent-island-autonomous-guide-map-v2.md  api-contract.md
docs/brainstorms/: 2026-06-06-another-me-requirements.md
docs/plans/: 2026-06-06-lineage-comparison-analysis.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
modules/01-agent-launch/: page.js
modules/02-avatar/: README.md
modules/03-social/: README.md  entry-card.html
modules/04-about/: entry-card.html
modules/shared/: module-entry.js
modules/web/: about.html  agent-launch.html  avatar.html  avatar.js  index.html  (+2 more)
sandbox-runner/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
scripts/: serve-local-mirror.mjs
site/: agent-square-embed.html  index.html
(+242 files in other folders)
