[project]
name = "another-me-sandbox-runner"
version = "0.1.0"
description = "Isolated code-execution service for Another Me (no DB, no secrets, no external network)."
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
]

# This is an application, not a distributable package — install deps only.
[tool.uv]
package = false
